# ml-web-app

./: pyproject.toml
data/: ufo-model.pkl  ufos.csv
src/: train.py
web-app/: app.py
web-app/templates/: index.html
