[tool.poetry]
name = "ml-web-app"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
numpy = "^1.21.0"
scikit-learn = "^0.24.2"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.9.3"
black = "^21.6b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
